<resources>
    <string name="app_name">Make Ready TV</string>
    <string name="retry">Try Again</string>
    <string name="no_connection">No internet connection found.</string>
    <string name="check_connection_text">Check your connection.</string>
    <string name="change_password">Change Password</string>
    <string name="checkout">Checkout</string>
    <string name="by_email">By Email</string>
    <string name="by_line">By Line</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="guest_user">Guest User</string>
    <string name="in_case_of_any">In case of any issues</string>
    <string name="subscribed_already">This user is already subscribed to this plan.</string>
    <string name="redeem_code_already_used">Redeem code is already used.</string>
    <string name="redeem_cancelled">Redeem code is cancelled. Please contact support.</string>
    <string name="redeem_code_invalid">Redeem code is invalid.</string>
    <string name="redeem_code_expired">Redeem code is expired</string>
    <string name="please_try">Please try again or contact support</string>
    <string name="cannot_find_any_subs">cannot find any subscription or subscription cannot contain price</string>
    <string name="on_enveu">on Make Ready TV!</string>
    <string name="full_name">Name</string>
    <string name="buy_for">Subscribe now for next</string>
    <string name="rent_for">Rent for</string>
    <string name="not_avail_for_Region">This feature is not available in your region</string>
    <string name="day_Rental">days</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="years">years</string>
    <string name="offer_region_not_available">No offer available in your region!</string>
    <string name="no_valid_offer">No valid offers available for this content</string>
    <string name="no_Subscription_managment">No Subscription Management information present</string>
    <string name="signup"><b><u>Sign Up</u></b></string>
    <string name="cannot_find_other_offer">cannot find any offer with this sku</string>
    <string name="not_find_any_offer">cannot find any valid offer</string>
    <string name="currency_not_supported">Currency not supported by this offer</string>
    <string name="payment_config_not_found">Payment configuration not found</string>
    <string name="login">Login</string>
    <string name="user_not_already_in_watchlist">This asset is not available in this user\'s watchlist</string>
    <string name="user_already_in_watchlist">This asset already exists in this user\'s watchlist​.</string>
    <string name="user_already_liked">This asset is already liked by the user​</string>
    <string name="user_already_not_liked">This asset is not liked by the user​</string>
    <string name="receipt_validation_url_not_avail">Receipt validation URL not available</string>
    <string name="payment_validation_failed">Payment Validation Failed</string>
    <string name="purchase_token_required">Purchase Token is required under notes</string>
    <string name="payment_id_not_found">Payment with this id Not found</string>
    <string name="payment_provider_not_Supported">This payment provider is not supported by this project</string>
    <string name="no_config_found">No config found for this payment provider</string>
    <string name="order_not_found">Order not found</string>
    <string name="order_completed_or_failed">This order has already been completed or failed. Please create a new order</string>
    <string name="sign_in_with_enveu">Sign in with Make Ready TV</string>
    <string name="sign_up_with_enveu">Sign up with Make Ready TV</string>
    <string name="facebook">Facebook</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="google">Google +</string>
    <string name="register">Register</string>
    <string name="sign_in"><b><u>Sign In</u></b></string>
    <string name="or_login_with">Or Login with</string>
    <string name="or">Or</string>
    <string name="or_caps">- OR -</string>
    <string name="skip">Skip</string>
    <string name="wrong_password">For Existing Customers for panteao.com, please select “Forgot Password” option below</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_u"><b><u>Forgot Password?</u></b></string>
    <string name="email_id">Email for FB Login </string>
    <string name="watchlist_empty_message">Keep track of Movies, TV shows and clips you want to watch</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="title_more">More</string>
    <string name="listing_title_text"><b>Movie</b></string>
    <string name="title_trending">Trending</string>
    <string name="email_address">Email Address</string>
    <string name="send_email">Send Email</string>
    <string name="save">Save</string>
    <string name="new_password">New Password</string>
    <string name="notification">Notifications</string>
    <string name="login_signup">Log In / Sign Up</string>
    <string name="login_txt">Login</string>
    <string name="update">Update</string>
    <string name="verify_user">Verify Account</string>
    <string name="connct_facebbook">Connect with Facebook</string>
    <string name="detail_title">Enter your registered email address below and we will send you instructions on resetting your password.</string>
    <string name="already_have_account_sign">Already have an account?</string>
    <string name="cancel">Cancel</string>
    <string name="later">Later</string>
    <string name="no_internet">No internet connection found.</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="my_profile">My Profile</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="password_length">Minimum 6 characters having atleast 1 number</string>
    <string name="valid_email">Invalid Email Address</string>
    <string name="empty_password">Please enter a password between 6 to 20 characters</string>
    <string name="empty_string">Please enter Email Address</string>
    <string name="credential_mismatch">Credentials Mismatch!</string>
    <string name="strong_password_required">Please enter a password between 6 to 20 characters.</string>
    <string name="email_check_signup">Please enter Email Address</string>
    <string name="empty_name">Name can not be empty</string>
    <string name="name_validation_profile">Name is required</string>
    <string name="profile_update_successfully">Updated Successfully!</string>
    <string name="profile_registered_successfully">Registered Successfully!</string>
    <string name="forgot_password_response">Thanks for putting the request. If we find the email address in our system, we will send the reset link over the mail</string>
    <string name="please_enter_new_password">Please enter New Password</string>
    <string name="please_confirm_password">Please enter Confirm Password</string>
    <string name="password_changed_successfully">Password Changed Successfully!</string>
    <string name="confirm_pwd_not_match"> Confirm Password doesn\'t match</string>
    <string name="ok">OK</string>
    <string name="verify_account">Verify Account</string>
    <string name="account_verification_link">Are you sure you want to verify your acccount?</string>
    <string name="submit">Submit</string>
    <string name="no_result_found">No Results Found</string>
    <string name="no_result_found_title">No Results Found</string>
    <string name="popular_search">Popular Searches</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="no_result">Sorry! we could not find any results.</string>
    <string name="no_result1">Try searching for another episode, movie or show</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="image_upload_fail">Image upload failed</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search_mv_hub">Search (min 3 char)</string>
    <string name="show_all_results">Show All</string>
    <string name="series">Series</string>
    <string name="article">Article</string>
    <string name="movie">Movie</string>
    <string name="please_login_watchlist">Login to add to watchlist</string>
    <string name="please_login_like">Login to like</string>
    <string name="please_login_play">Login to play</string>
    <string name="VIDEO">VIDEO</string>
    <string name="less">LESS</string>
    <string name="more">MORE</string>
    <string name="share">Share</string>
    <string name="watchlist">Watchlist</string>
    <string name="like">Like</string>
    <string name="crew">Genre: </string>
    <string name="cast">Cast: </string>
    <string name="you_may_also_like">You May Also Like</string>
    <string name="trailor">Trailer</string>
    <string name="exclusive">Premium</string>
    <string name="splash_screen">Splash screen</string>
    <string name="new_version_available">New version available</string>
    <string name="please_update_your_app">We have a new version available. Kindly update to enjoy Make Ready TV.</string>
    <string name="result_caps">RESULT</string>
    <string name="results_caps">RESULTS</string>
    <string name="no_season">No season</string>
    <string name="all">All</string>
    <string name="login_to_play">Login to play</string>
    <string name="you_are_not_subscribed">You are not subscribed</string>
    <string name="can_not_play_error">Cannot play this video. If issue persists, contact us.</string>
    <string name="comments">Comments</string>
    <string name="add_comment">Add a comment...</string>
    <string name="add_comment_fail">Adding comment fail please retry</string>
    <string name="please_login_post">Login to post</string>
    <string name="delete_history_confirmation">Are you sure you want to delete the search history?</string>
    <string name="delete_confirmation">Are you sure you want to delete this comment?</string>
    <string name="cannot_delete_this_comment">You can delete only your comments.</string>
    <string name="Continue">Continue</string>
    <string name="title_home">Home</string>
    <string name="title_skill_set">Skillset</string>
    <string name="title_instructor">Instructors</string>
    <string name="title_premium">Premium</string>
    <string name="title_more1">More</string>
    <string name="start_download">Start download</string>
    <string name="make_quality_default">Next time video will be downloaded by default in this quality.You can change this from Settings.</string>
    <string name="save_preference">Save Preference</string>
    <string name="available_size">Available space :</string>
    <string name="download_option">Download Quality</string>
    <string name="username_password_doest_match">Username or Password doesn\'t match​​</string>
    <string name="waiting_for_wifi">waiting for wifi</string>
    <string name="download_will_begin">Your download will begin once you are come on WiFi. Or you can change the setting below:</string>
    <string name="download_over_wifi">Download over WiFi</string>
    <string name="you_can_change">*You can change this from settings</string>
    <string name="content_discription">Image Description</string>
    <string name="log_in_with_facebook">Sign in with Facebook</string>
    <string name="facebook_com_device">facebook.com/device</string>
    <string name="on_your_smart_phone_or_computer">on your smartphone or computer</string>
    <string name="and_enter_this_code">and enter this code:</string>
    <string name="code_expire_in">Code Expire In :</string>
    <string name="success">Success!</string>
    <string name="you_are_now_logged_in">You are now logged in.</string>
</resources>