<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_sinetron"
        android:enabled="true"
        android:icon="@drawable/ic_skillset"
        android:title="@string/title_skill_set"
        app:showAsAction="always|withText" />


    <item
        android:id="@+id/navigation_premium"
        android:enabled="true"
        android:icon="@drawable/ic_instructor"
        android:title="@string/title_instructor"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_originals"
        android:enabled="true"
        android:icon="@drawable/ic_free"
        android:title="@string/title_premium"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_more"
        android:enabled="true"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more1"
        app:showAsAction="always|withText" />

</menu>
