<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/backgroundColor">

        <Button
            android:id="@+id/btn_start_download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/moretitlecolor"
            android:text="@string/start_download"
            android:textColor="@color/rounded_button_text_color"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/default_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:paddingBottom="20dp"
            android:text="@string/make_quality_default"
            android:textColor="@color/white"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@id/btn_start_download" />


        <CheckBox
            android:id="@+id/checkbox_make_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/save_preference"
            android:visibility="gone"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/default_textview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/checkbox_make_default" />

        <TextView
            android:id="@+id/available_space"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/available_size"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/recycler_view" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/roboto_bold"
            android:paddingTop="20dp"
            android:text="@string/download_option"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/available_space" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>