<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_centerInParent="true"
            android:background="#ffffff"
            android:layout_width="550dp"
            android:layout_height="160dp">

            <Button
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                android:id="@+id/btnCancel"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="10dp"
                android:background="@drawable/cancel_btn_selector"
                android:text="@string/ok"
                android:clickable="true"
                android:focusable="true"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:padding="8dp"
                android:textAllCaps="false"
                android:contentDescription="@string/content_discription"/>

            <TextView
                android:id="@+id/txtResponse"
                android:textSize="16sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_gravity="center"
                android:text="@string/username_password_doest_match"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                />

        </RelativeLayout>

    </RelativeLayout>

</layout>





