<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="550dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#ffffff">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="@string/success"
                    android:textColor="#E6444444"
                    android:textSize="36dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="80dp"
                        android:layout_height="80dp">

                        <ImageView
                            android:id="@+id/imgUserProfilePic"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/content_discription" />
                    </RelativeLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtUserName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:maxLines="1"
                            android:paddingLeft="24dp"
                            android:paddingRight="24dp"
                            android:text="@string/app_name"
                            android:textColor="#636363"
                            android:textSize="24sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:paddingLeft="24dp"
                            android:paddingRight="24dp"
                            android:text="@string/you_are_now_logged_in"
                            android:textColor="#636363"
                            android:textSize="24sp" />


                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/btnContinue"
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:layout_gravity="center"
                        android:background="@color/dialog_green_color"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:text="@string/Continue"
                        android:textAllCaps="false"
                        android:textColor="#000000"
                        android:textSize="24dp" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</layout>





