<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingRight="@dimen/_10sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:gravity="center"
            android:background="?attr/backgroundColor"
            android:paddingBottom="20dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:gravity="center_horizontal"
                android:text="@string/waiting_for_wifi"
                android:textSize="15sp"
                android:fontFamily="@font/roboto_medium"
                android:textColor="?attr/title_color"
                android:layout_marginTop="@dimen/_10sdp"
                android:focusableInTouchMode="true"
                />

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/download_will_begin"
                android:textSize="13sp"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/edit_text"
                android:layout_marginTop="@dimen/_25sdp"
                android:focusableInTouchMode="true"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/download_over_wifi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:text="@string/download_over_wifi"
                    android:textSize="15sp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="@color/edit_text"
                    android:focusableInTouchMode="true"
                    />

                <Switch
                    android:id="@+id/switch_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:theme="@style/SwitchTheme" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/change_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:text="@string/you_can_change"
                    android:textSize="12sp"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/edit_text"
                    android:focusableInTouchMode="true"
                    />


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_start_download"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button"
                    android:text="@string/ok"
                    android:textColor="@color/rounded_button_text_color"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </LinearLayout>



        </LinearLayout>



</layout>