<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="650dp"
            android:layout_height="350dp"
            android:layout_centerInParent="true"
            android:background="#ffffff">

            <ImageView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/cancel_btn_selector"
                android:clickable="true"
                android:contentDescription="@string/content_discription"
                android:focusable="true"
                android:padding="8dp"
                android:src="@drawable/ic_close_black"
                android:textAllCaps="false" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/btnCancel"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="@string/log_in_with_facebook"
                    android:textColor="#000000"
                    android:textSize="32dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="4dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtNextVisit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:text="@string/facebook_com_device"
                        android:textColor="@color/facebookcolor"
                        android:textSize="24dp" />

                    <TextView
                        android:id="@+id/txtOnYourSmartPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:text="@string/on_your_smart_phone_or_computer"
                        android:textColor="#B2696969"
                        android:textSize="24dp" />

                    <TextView
                        android:id="@+id/txtEnterThisCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"
                        android:text="@string/and_enter_this_code"
                        android:textColor="#B2696969"
                        android:textSize="24dp" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="10dp"
                    android:theme="@style/progressBarGreen" />

                <TextView
                    android:id="@+id/txtUserCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:text="gfttyewtyry"
                    android:textAllCaps="true"
                    android:textColor="#E6444444"
                    android:textSize="42dp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <LinearLayout
                    android:id="@+id/lnExpireTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:gravity="center"
                    android:visibility="gone"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingLeft="24dp"
                        android:paddingRight="9dp"
                        android:text="@string/code_expire_in"
                        android:textColor="#E6B81414"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtCodeExpireIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:paddingRight="24dp"
                        android:text="00:00 sec"
                        android:textColor="#E6B81414"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

</layout>





